--- a/src/scss/partial/_modal.scss
+++ b/src/scss/partial/_modal.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 50px;
+  padding: 50px 200px;
   background-color: rgba(65, 62, 62, 0.6);
   visibility: visible;
   opacity: 1;
@@ -18,12 +18,15 @@
 }
 
 .modal {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 90vw;
+  max-height: 90vh;
   & img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 90vw;
+    max-height: 90vh;
   }
 }
 
