--- a/src/scss/partial/_modal.scss
+++ b/src/scss/partial/_modal.scss
@@ -1,10 +1,9 @@
 .backdrop {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 50px 200px;
   background-color: rgba(65, 62, 62, 0.6);
   visibility: visible;
   opacity: 1;
@@ -22,11 +21,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 90vw;
-  max-height: 90vh;
+  width: 90%;
+  height: 90%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   & img {
-    max-width: 90vw;
-    max-height: 90vh;
+    max-width: 100%;
+    max-height: 100%;
   }
 }
 
