--- a/src/templates/form.hbs
+++ b/src/templates/form.hbs
@@ -2,10 +2,6 @@
   <input type='text' name='query' autocomplete='off' placeholder='Search images...' />
   <label>
     Count image on page
-    <input type='number' name='countOnPage' placeholder='count element on page' value='4' />
-  </label>
-  <label>
-    Show button "Load more"
-    <input type='checkbox' name='pagination' />
+    <input class='count-image' type='text' name='countOnPage' value='' />
   </label>
 </form>
