--- a/src/scss/partial/_item.scss
+++ b/src/scss/partial/_item.scss
@@ -10,3 +10,12 @@
   justify-content: space-around;
   align-items: end;
 }
+
+.stats-item {
+  display: flex;
+  align-items: center;
+}
+
+.material-icons {
+  margin-right: 20px;
+}
